Update dependencies and enhance documentation
- Upgraded Docusaurus dependencies to version 3.9.1 in both package.json and package-lock.json for improved performance and features.
- Simplified the Supervaize Studio sidebar by removing unnecessary category structure, directly linking to the introduction document.
- Added a warning note in the deployment documentation indicating that the deployment feature is a work in progress and only available in the `feature/deploy` branch.
- Expanded deployment documentation with new options for generating Docker files and customizing source directories, enhancing usability for users.
- Updated CLI documentation to reflect new deployment options and improved clarity on usage.

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.8.1",
-    "@docusaurus/plugin-google-gtag": "^3.8.1",
-    "@docusaurus/preset-classic": "3.8.1",
-    "@docusaurus/theme-search-algolia": "^3.8.1",
+    "@docusaurus/core": "^3.9.1",
+    "@docusaurus/plugin-google-gtag": "^3.9.1",
+    "@docusaurus/preset-classic": "^3.9.1",
+    "@docusaurus/theme-search-algolia": "^3.9.1",
     "@mdx-js/react": "^3.1.0",
     "@saucelabs/theme-github-codeblock": "^0.3.0",
     "bootstrap-icons": "^1.13.1",
@@ -28,8 +28,8 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.8.1",
-    "@docusaurus/tsconfig": "3.8.1",
+    "@docusaurus/module-type-aliases": "^3.9.1",
+    "@docusaurus/tsconfig": "^3.9.1",
     "@docusaurus/types": "3.8.1",
     "typescript": "~5.9.2"
   },
