fix: version bump

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,91 @@ on:
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
 jobs:
+  version-bump:
+    name: Auto Version Bump
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Determine version bump type
+        id: version-bump
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          echo "Commit message: $COMMIT_MSG"
+          
+          # Skip if this is already a version bump commit
+          if echo "$COMMIT_MSG" | grep -qiE "chore: bump version|\[skip ci\]"; then
+            echo "skip-bump=true" >> $GITHUB_OUTPUT
+            echo "Skipping version bump (already a version bump commit)"
+            exit 0
+          fi
+          
+          # Check for breaking changes
+          if echo "$COMMIT_MSG" | grep -qiE "(BREAKING CHANGE|!|breaking)"; then
+            BUMP_TYPE="major"
+          # Check for features
+          elif echo "$COMMIT_MSG" | grep -qiE "^feat(ure)?:"; then
+            BUMP_TYPE="minor"
+          # Check for fixes
+          elif echo "$COMMIT_MSG" | grep -qiE "^fix:"; then
+            BUMP_TYPE="patch"
+          # Default to patch
+          else
+            BUMP_TYPE="patch"
+          fi
+          
+          echo "skip-bump=false" >> $GITHUB_OUTPUT
+          echo "bump-type=$BUMP_TYPE" >> $GITHUB_OUTPUT
+          echo "Bump type: $BUMP_TYPE"
+
+      - name: Bump version
+        id: bump
+        if: steps.version-bump.outputs.skip-bump != 'true'
+        run: |
+          BUMP_TYPE="${{ steps.version-bump.outputs.bump-type }}"
+          npm version $BUMP_TYPE --no-git-tag-version
+          
+          # Sync version to other files
+          npm run sync-version
+          
+          # Get new version
+          NEW_VERSION=$(node -p "require('./package.json').version")
+          echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "New version: $NEW_VERSION"
+
+      - name: Commit and push version bump
+        if: steps.version-bump.outputs.skip-bump != 'true'
+        run: |
+          NEW_VERSION="${{ steps.bump.outputs.new-version }}"
+          git add package.json README.md
+          git commit -m "chore: bump version to v$NEW_VERSION [skip ci]" || exit 0
+          git push
+
+      - name: Create git tag
+        if: steps.version-bump.outputs.skip-bump != 'true'
+        run: |
+          NEW_VERSION="${{ steps.bump.outputs.new-version }}"
+          git tag -a "v$NEW_VERSION" -m "Release v$NEW_VERSION"
+          git push origin "v$NEW_VERSION"
+
   build:
     name: Build Docusaurus
+    needs: version-bump
+    if: always()
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
